# when-signals-stop-working

./: .gitattributes  .gitignore  CHALLENGE.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  PUBLIC_RELEASE_AUDIT.json  PUBLISH_PUBLIC_REPLICATION.ps1  README.md  RELEASE_NOTES_V2_0_0.md  REPLICATION_CHECKSUMS.sha256  REPLICATION_MANIFEST.json  REPOSITORY_MAP.md  RESEARCH_SCOPE.md  RESULTS.md  ROADMAP.md  RUN_CHALLENGE.ps1  RUN_CHALLENGE.sh  RUN_REPLICATION.ps1  RUN_REPLICATION.sh  RUN_V2_D1_CAUSAL_ENGINE.ps1  RUN_V2_D1_CAUSAL_ENGINE.sh  RUN_V2_D2A_SCREENING.ps1  RUN_V2_D2A_SCREENING.sh  RUN_V2_D2B_SELECTION.ps1  RUN_V2_D2B_SELECTION.sh  RUN_V2_D2C_ADMISSION.ps1  RUN_V2_D2C_ADMISSION.sh  RUN_V2_D3_LOCKED_EVALUATION.ps1  RUN_V2_D3_LOCKED_EVALUATION.sh  RUN_V2_D4_CONFIRMATORY_INFERENCE.ps1  RUN_V2_D4_CONFIRMATORY_INFERENCE.sh  RUN_V2_D5_ROBUSTNESS_PUBLICATION.ps1  RUN_V2_D5_ROBUSTNESS_PUBLICATION.sh  RUN_V2_DEVELOPMENT_SCAFFOLD.ps1  RUN_V2_DEVELOPMENT_SCAFFOLD.sh  RUN_V3_G1_DATA_ADAPTER.ps1  RUN_V3_G1_DATA_ADAPTER.sh  RUN_V3_G2B_MARKET_STRUCTURE.ps1  (+35 more)
configs/: sol_4h_primary.json  v2_d1_engine.json  v2_d2a_screening.json  v2_d2b_selection.json  v2_d2c_admission.json  v2_d3_locked_evaluation.json  v2_d4_confirmatory_inference.json  v2_d5_robustness_publication.json  v2_experiment_registry.json  v2_runtime_defaults.json  v3_adapter_example.json  v3_canonical_data_contract.json  v3_market_structure_example.json  v3_spectral_example.json
data/: README.md
docs/: DIRECT_ANSWER_LOGIC.md  EDITORIAL_STANDARD.md  FIGURE_CATALOG.md  MESSAGE_TO_RICHARD.md  MODEL_CONTRACT.md  PUBLIC_RELEASE_POLICY.md  REFERENCES.md  REPLICATION_PACKAGE.md  RESEARCH_PROTOCOL.md  V3_DATA_ADAPTERS.md  (+27 more)
(+222 files in other folders)
