[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "when-signals-stop-working"
version = "1.0.0"
description = "Benchmark-relative validation of RSI and Bollinger Band signal persistence under changing market regimes."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ccxt>=4.4",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pandas>=2.1",
    "scikit-learn>=1.4",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
shockbridge-signal-validity = "shockbridge_signal_validity.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]
testpaths = ["tests"]
